nav menu on mobile positioning fix

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -80,7 +80,7 @@
     @media screen and ( max-width: 767px )
       position: absolute
       margin: 0
-      top: 110%
+      top: 100%
       left: 0
       width: 320px
       flex-direction: column
