--- a/components/section/section.sass
+++ b/components/section/section.sass
@@ -1,15 +1,24 @@
 .section
-  // content is centered
+  // only centers everything
   display: flex
   position: relative
   justify-content: center
   align-items: center
   flex-direction: column
   &__container
+    // centers its content and sets width to 1920px max
     display: flex
     justify-content: center
     max-width: 1920px
     width: 100%
+
+  &__content
+    // mainly used to reduce width to 1200px
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+    max-width: 1200px
+    // margin-bottom: 43px
 
   &__title
     font-size: 36px
